@@ -1,3 +1,7 @@
+2012-10-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/jnx.c: Add image attribute with geolocation.
+
 2012-10-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* dcraw: VisualMagick configure fixes to support linking with JPEG
